crates/ink/tests/ui/contract/fail/event-too-many-topics.stderr
error[E0277]: the trait bound `EventTopics<3>: RespectTopicLimit<2>` is not satisfied
  --> tests/ui/contract/fail/event-too-many-topics.rs:25:5
   |
25 |     pub struct Event {
   |     ^^^ the trait `RespectTopicLimit<2>` is not implemented for `EventTopics<3>`
   |
   = help: the following other types implement trait `RespectTopicLimit<N>`:
             <EventTopics<0> as RespectTopicLimit<0>>
             <EventTopics<0> as RespectTopicLimit<10>>
             <EventTopics<0> as RespectTopicLimit<11>>
             <EventTopics<0> as RespectTopicLimit<12>>
             <EventTopics<0> as RespectTopicLimit<1>>
             <EventTopics<0> as RespectTopicLimit<2>>
             <EventTopics<0> as RespectTopicLimit<3>>
             <EventTopics<0> as RespectTopicLimit<4>>
           and 83 others
note: required by a bound in `EventRespectsTopicLimit`
  --> src/codegen/event/topics.rs
   |
   |     <Event as EventLenTopics>::LenTopics: RespectTopicLimit<LEN_MAX_TOPICS>,
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EventRespectsTopicLimit`
